--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/hardhat-upgrades": "^1.18.1",
-    "ethers": "^5.6.8"
+    "ethers": "^5.6.8",
+    "hardhat": "^2.12.0"
   },
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
     "dotenv": "^16.0.1",
-    "hardhat": "^2.10.2",
     "hardhat-abi-exporter": "^2.9.0"
   }
 }
