--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hardhat-project",
+  "name": "cryptolottery",
+  "version": "1.0",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
